# src/main/java/com/example/todoapp/presentation/dto/TaskResponseDto.java
@@ -1,0 +1,4 @@
+package com.example.todoapp.presentation.dto;
+
+public record TaskResponseDto(int id, String title, String description, boolean done) {
+}
