# src/main/java/com/example/todoapp/presentation/dto/TaskUpdateDto.java
@@ -1,0 +1,4 @@
+package com.example.todoapp.presentation.dto;
+
+public record TaskUpdateDto(String title, String description, boolean done) {
+}
